--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -42,10 +42,11 @@
 
 
     <ImageButton
-        android:id="@+id/is_favourite_image_button"
+        android:id="@+id/is_favorite_image_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_star_border"
-        android:contentDescription="@string/favorite_button"/>
+        android:contentDescription="@string/favorite_button"
+        android:backgroundTint="#0000FFFF"/>
 
 </LinearLayout>
