--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -13,17 +13,18 @@
         android:layout_height="wrap_content" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_weight="5">
 
         <TextView
             android:id="@+id/task_title_text_view"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:textColor="@color/black"
-            tools:text="sdjklfjsdlk"/>
+            tools:text="dsadsada"/>
 
         <TextView
             android:id="@+id/task_addit_info_text_view"
@@ -31,14 +32,9 @@
             android:layout_height="wrap_content"
             android:textSize="18sp"
             android:textColor="@color/gray"
-            tools:text="sdjklfjsdlk" />
+            tools:text="sdjklfjsdlk"/>
 
     </LinearLayout>
-
-    <Space
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"/>
 
 
     <ImageButton
